Unit tests for MapNavController and Instruction.

--- a/MapNav/Views/Home/Index.cshtml
+++ b/MapNav/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>THIS SHOULD BE 10: @ViewBag.DistanceFirst</h2>
-        <h2>THIS SHOULD BE 209: @ViewBag.DistanceSecond</h2>
+        <h2>Hi! Check out the API!</h2>
     </div>
 </div>
