--- a/MapNav/Views/Home/NgApp.cshtml
+++ b/MapNav/Views/Home/NgApp.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
     Layout = null;
 }
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <title>MapNavFE</title>
     <base href="/">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="~/Content/bootstrap.css">
 </head>
 <body>
     <app-root>Loading...</app-root>
